--- a/img/thebeginning.css
+++ b/img/thebeginning.css
@@ -1,1 +1,142 @@
-    @charset "UTF-8";    body {    font-family:  Baskerville, Georgia, sans-serif;    color: #242424;    line-height: 20px;    font: 62.5%;    background: #f2f2f2;    padding: 0;    }    ol, ul {        list-style: none outside none;    }    .menu {    border-bottom: 1px solid #C5C6C8;    background-color:#242424;    float: left;    width: 594px;    /*margin-left: 7px;*/    }    .menu ul {    margin-left:auto;    margin-right:auto;    margin: 0px auto;    /*width: 500px;*/    border-bottom: 1px solid #C5C6C8;    }    .menu li {    border-right: 1px solid #999999;    float: left;    font-size: 14px;    height: 13px;    line-height: 10px;    margin: 6px 3px;    padding-right: 5px;    text-transform: capitalize;    text-align:center;}    .li-text{        text-decoration: none;        float: left;        font-size: 14px;        height: 13px;        line-height: 10px;        margin: 6px 3px;        padding-right: 5px;        text-transform: capitalize;        text-align:center;    }    .menu a {    color: #E5E3E3;    text-decoration: none;    font-family: Helvetica;    }    tr, th, td {    background: none repeat scroll 0 0 transparent;    border: 0 none;    font-size: 100%;    margin: 0;    outline: 0 none;    padding: 0;    vertical-align: baseline;    }    .menu a:hover {text-decoration: underline;}        .clearfloat { /* this class should be placed on a div or break element and should be the final element before the close of a container that should fully contain a float */        clear:both;        height:0;        font-size: 1px;        line-height: 0px;    }    #container {        width: 594px;        margin-right: auto;        margin-bottom: 0px;        margin-left: auto;        /*border: 1px solid #E2E0E0;*/        margin-top: 5%;        box-shadow: 0px 0px 15px 40px #E5E3E3;    }    img {    /*border: 10px #E5E3E3;*/    }    .sidebar {    float: left;    width: 294px;    height: 304px;    }    .content {    width: 560px;    /*margin-left: 20px;*/    float: left;    font-size: 12px;    height: 300px;    overflow: auto;    padding-right: 8px;    }    .slide    {          clear:both;          margin-left: 0;          margin-right: 0;          margin-top: 0;          margin-top: 0;          padding: 0 0 0 0;          height: 377px; width: 600px;          border: 0;    }    .slide li{           clear:both;    }    .footer {    height: 13px;    background-color: #3c413a;    margin-top: 8px;    font-size: 9px;    color: #FFFFFF;    line-height: normal;    text-align: right;    padding-right: 12px;    }    .header{        clear: both;        line-height: 0;    }td {text-align: left;vertical-align: top;}
+
+    @charset "UTF-8";
+    body {
+    font-family:  Baskerville, Georgia, sans-serif;
+    color: #242424;
+    line-height: 20px;
+    font: 62.5%;
+    background: #f2f2f2;
+    padding: 0;
+    }
+    ol, ul {
+
+        list-style: none outside none;
+    }
+    .menu {
+    border-bottom: 1px solid #C5C6C8;
+    background-color:#242424;
+    float: left;
+    width: 600px;
+    /*margin-left: 7px;*/
+    }
+
+    .menu ul {
+
+    margin-left:auto;
+    margin-right:auto;
+    margin: 0px auto;
+    /*width: 500px;*/
+    border-bottom: 1px solid #C5C6C8;
+    }
+
+    .menu li {
+        border-right: 1px solid #999999;
+        float: left;
+        font-size: 14px;
+        height: 13px;
+        line-height: 10px;
+
+        margin: 6px 3px;
+        padding-right: 5px;
+
+        text-transform: capitalize;
+        text-align:center;
+    }
+    .li-text{
+        text-decoration: none;
+        float: left;
+        font-size: 14px;
+        height: 13px;
+        line-height: 10px;
+        margin: 6px 3px;
+        padding-right: 5px;
+        text-transform: capitalize;
+        text-align:center;
+    }
+    .menu a {
+        color: #E5E3E3;
+        text-decoration: none;
+        font-family: Helvetica;
+    }
+
+    tr, th, td {
+        background: none repeat scroll 0 0 transparent;
+        border: 0 none;
+        font-size: 100%;
+        margin: 0;
+        outline: 0 none;
+        padding: 0;
+        vertical-align: baseline;
+    }
+    .menu a:hover {text-decoration: underline;}
+    
+    .clearfloat { /* this class should be placed on a div or break element and should be the final element before the close of a container that should fully contain a float */
+        clear:both;
+        height:0;
+        font-size: 1px;
+        line-height: 0px;
+    }
+    #container {
+        width: 594px;
+        margin-right: auto;
+        margin-bottom: 0px;
+        margin-left: auto;
+        /*border: 1px solid #E2E0E0;*/
+        margin-top: 5%;
+        box-shadow: 0px 0px 15px 40px #E5E3E3;
+    }
+    img {
+    /*border: 10px #E5E3E3;*/
+    }
+    .sidebar {
+    float: left;
+    width: 294px;
+    height: 304px;
+    }
+    .content {
+    width: 600px;
+    /*margin-left: 20px;*/
+    float: left;
+    font-size: 12px;
+    height: 400px;
+    overflow: auto;
+    /*padding-right: 1px;*/
+
+    }
+    .slide
+    {
+          clear:both;
+          margin-left: 0;
+          margin-right: 0;
+          margin-top: 0;
+          margin-top: 0;
+          padding: 0 0 0 0;
+          height: 377px; width: 600px;
+          border: 0;
+    }
+    .slide li{
+           clear:both;
+    }
+
+    .footer {
+    height: 13px;
+    background-color: #3c413a;
+    margin-top: 8px;
+    font-size: 9px;
+    color: #FFFFFF;
+    line-height: normal;
+    text-align: right;
+    padding-right: 12px;
+    }
+    .header{
+        clear: both;
+        line-height: 0;
+        /*height: 377px;*/
+    }
+
+td {
+text-align: left;
+vertical-align: top;
+}
+
+
