--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
 
 <div id="container">
     <div class="header">
-        <iframe src="/img/slide.html" class="slide" border="no"  scrolling="no"></iframe>
+        <iframe src="/img/slide.html" style="border: none; height: 337px;width: 600px;"  align="top" marginheight="0" marginwidth="0" scrolling="no"></iframe>
 {#        <ul id="header_id" class="slide">#}
 {#            <li>#}
 {#                <img src="/img/shot1.png" alt="The Beginning" />#}
