--- a/templates/synopsis.html
+++ b/templates/synopsis.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
+{% block baslik %}
+{% endblock %}
 {% block icerik %}
     Sometimes a new beginning means going back to the beginning. Adnan, who has devoted his whole life to his children, brings his new and big decision up to his elder daughter Duygu, on their last big dinner as a family. Migrated to Istanbul 25 years ago for their daughters' education, the family is now up against a big test. Duygu, who can't understand her father's will to leave everything he ever worked for, starts taking Gogol's 'Overcoat' off while trying to persuade his father to stay. Eventually, a beginning means getting rid of everything, purification and becoming one.
     Being a family means being one, despite the deficiency.
-
-
 {% endblock %}
