--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 {% load url from future %}
 {% load static %}
+{% get_static_prefix as STATIC_URL %}
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
