--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -34,34 +34,7 @@
 jQuery(document).ready(function($) {
     $('#gallery a.visible').lightBox(); // Select all links with lightbox class
 });
-//jQuery(document).ready(function($) {
-//    var gallery = $('#gallery').galleriffic({
-//        delay:                     3000, // in milliseconds
-//        numThumbs:                 5, // The number of thumbnails to show page
-//        preloadAhead:              3, // Set to -1 to preload all images
-//        enableTopPager:            false,
-//        enableBottomPager:         true,
-//        maxPagesToShow:            7,  // The maximum number of pages to display in either the top or bottom pager
-//        imageContainerSel:         '', // The CSS selector for the element within which the main slideshow image should be rendered
-//        controlsContainerSel:      '', // The CSS selector for the element within which the slideshow controls should be rendered
-//        captionContainerSel:       '', // The CSS selector for the element within which the captions should be rendered
-//        loadingContainerSel:       '', // The CSS selector for the element within which should be shown when an image is loading
-////        renderSSControls:          true, // Specifies whether the slideshow's Play and Pause links should be rendered
-////        renderNavControls:         true, // Specifies whether the slideshow's Next and Previous links should be rendered
-//        playLinkText:              'Play',
-//        pauseLinkText:             'Pause',
-//        prevLinkText:              'Previous',
-//        nextLinkText:              'Next',
-//        nextPageLinkText:          'Next &rsaquo;',
-//        prevPageLinkText:          '&lsaquo; Prev',
-//        enableHistory:             false, // Specifies whether the url's hash and the browser's history cache should update when the current slideshow image changes
-//        enableKeyboardNavigation:  true, // Specifies whether keyboard navigation is enabled
-//        autoStart:                 false, // Specifies whether the slideshow should be playing or paused when the page first loads
-//        syncTransitions:           false, // Specifies whether the out and in transitions occur simultaneously or distinctly
-//        defaultTransitionDuration: 1000 // If using the default transitions, specifies the duration of the transitions
-//
-//    });
-//});
+
     </script>
 
 {% endblock %}
@@ -70,16 +43,16 @@ jQuery(document).ready(function($) {
     <div id="gallery">
         <ul>
             <li>
-                <a class="visible" href="{{ STATIC_URL }}images/shot1.png"><img src="{{ STATIC_URL }}images/shot1.png" width="72" height="72" alt="" /></a>
+                <a class="visible" href="{{ STATIC_URL }}images/shot1buyuk.png"><img src="{{ STATIC_URL }}images/shot1.png" width="96" height="54" alt="" /></a>
             </li>
             <li>
-                <a class='visible' href="{{ STATIC_URL }}images/shot2.png"><img src="{{ STATIC_URL }}images/shot2.png" width="72" height="72" alt="" /></a>
+                <a class='visible' href="{{ STATIC_URL }}images/shot2buyuk.png"><img src="{{ STATIC_URL }}images/shot2.png" width="96" height="54" alt="" /></a>
             </li>
             <li>
-                <a class='visible' href="{{ STATIC_URL }}images/shot3.png"><img src="{{ STATIC_URL }}images/shot3.png" width="72" height="72" alt="" /></a>
+                <a class='visible' href="{{ STATIC_URL }}images/shot3buyuk.png"><img src="{{ STATIC_URL }}images/shot3.png" width="96" height="54" alt="" /></a>
             </li>
             <li>
-                <a class='visible' href="{{ STATIC_URL }}images/shot4.png"><img src="{{ STATIC_URL }}images/shot4.png" width="72" height="72" alt="" /></a>
+                <a class='visible' href="{{ STATIC_URL }}images/shot4buyuk.png"><img src="{{ STATIC_URL }}images/shot4.png" width="96" height="54" alt="" /></a>
             </li>
         </ul>
     </div>
