--- a/templates/base.html
+++ b/templates/base.html
@@ -36,16 +36,20 @@
 <body>
 
 <div id="container">
+    <div class="slogan">
+        <a class="visible" href="/"><img src="{{ STATIC_URL }}images/sloganresize.png" width="600" height="76" alt="" /></a>
+    </div>
     <div class="header">
         <iframe src="{{ STATIC_URL }}html/slide.html" style="border: none; height: 337px;width: 600px;"  align="top" marginheight="0" marginwidth="0" scrolling="no"></iframe>
     </div>
 
     <div class="menu" align="center">
-        <a href="/synopsis" >Synopsis</a>
-        <a href="/movie" >Movie</a>
+        <a href="/background" >Background</a>
+        <a href="/video" >Video</a>
         <a href="/gallery" >Gallery</a>
-        <a href="/director" >About The Director</a>
-        <a style='border: none'href="/contact" >Contact</a>
+        <a href="/castandcrew" >Cast And Crew</a>
+        <a style='border: none' href="/director" >About The Director</a>
+{#        <a style='border: none'href="/contact" >Contact</a>#}
     </div>
     <div class="content">
 
@@ -55,7 +59,7 @@
         <br class="clearfloat" />
     
 	<div class="footer">
-    Copyright Multi Arts Production 2012
+    Copyright Multi Arts Production 2011
     </div>
 </div>
 
