--- a/static/css/thebeginning.css
+++ b/static/css/thebeginning.css
@@ -14,11 +14,12 @@
         list-style: none outside none;
     }
     .menu {
-    border-bottom: 1px solid #C5C6C8;
-    background-color:#242424;
-    float: left;
-    width: 600px;
-    /*margin-left: 7px;*/
+    
+        border-bottom: 1px solid #C5C6C8;
+        background-color:#242424;
+        float: left;
+        width: 600px;
+        /*margin-left: 7px;*/
     }
     .li-text{
         text-decoration: none;
@@ -34,7 +35,7 @@
     .menu a {
         border-right: 1px solid #999999;
         /*float: left;*/
-        font-size: 85%;
+        /*font-size: 100%;*/
         height: 13px;
         line-height: 10px;
 
@@ -57,7 +58,9 @@
         padding: 0;
         vertical-align: baseline;
     }
-    .menu a:hover {text-decoration: underline;}
+    .menu a:hover {
+        text-decoration: underline;
+    }
     
     .clearfloat { /* this class should be placed on a div or break element and should be the final element before the close of a container that should fully contain a float */
         clear:both;
@@ -66,17 +69,14 @@
         line-height: 0px;
     }
     #container {
-        width: 594px;
+        width: 600px;
         margin-right: auto;
         margin-bottom: 0px;
         margin-left: auto;
         /*border: 1px solid #E2E0E0;*/
         margin-top: 5%;
-        box-shadow: 0px 0px 15px 40px #E5E3E3;
-
-    }
-    img {
-    /*border: 10px #E5E3E3;*/
+        /*box-shadow: 0px 0px 15px 40px #E5E3E3;*/
+        box-shadow: 0px 0px 15px 15px #000000;
     }
     .sidebar {
     float: left;
@@ -85,12 +85,12 @@
     }
     .content {
     width: 600px;
-    /*margin-left: 20px;*/
+
     float: left;
     font-size: 12px;
     height: 300px;
-    overflow: hidden;
-    /*padding-right: 1px;*/
+    overflow: auto;
+    
 
     }
     .slide
@@ -124,17 +124,17 @@
         /*height: 377px;*/
     }
 
-td {
-text-align: left;
-vertical-align: top;
-}
+    td {
+    text-align: left;
+    vertical-align: top;
+    }
 
- /*#gallery {*/
+ #gallery {
      /*background-color: #444;*/
-     /*padding: 10px;*/
+     padding: 15px;
      /*width: 580px;*/
      /*height: 300px;*/
- /*}*/
+ }
  #gallery ul {
      list-style: none;
 
@@ -155,5 +155,9 @@ vertical-align: top;
  }
  #gallery ul a:hover { color: #fff; }
 
-
-
+h1 {
+    border-bottom: thin solid #333333;
+    font-size: 18px;
+    padding-bottom: 6px;
+    text-align: center;
+}
