--- a/templates/director.html
+++ b/templates/director.html
@@ -9,7 +9,7 @@
             </td>
             <td>
                 <p align="left" style="padding: 10px;">
-                He was born in 1988 in Turkey.Graduaded from Kadir Has Univercity Radio,Television and Cinema with scholarship.He attanded International Antalya Film Festival,Los Angeles Turkish Film Festival,Akbank Short Film Festival and Cannes Short Film Corner with his first short film The Beginning.
+                He was born in 1988 in Turkey.Graduated from Kadir Has Univercity Radio,Television and Cinema with scholarship.He attanded International Antalya Film Festival,Los Angeles Turkish Film Festival,Akbank Short Film Festival and Cannes Short Film Corner with his first short film The Beginning.
                 <br><br>
                 You can contact him via <a style="display: inline;" href="mailto:ygtevgar@gmail.com">ygtevgar@gmail.com</a>.
                 </p>
